--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>HW-Wireframe</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -19,12 +19,12 @@
     </nav>
 
     <section>
-        section
+        <h2>section</h2>
             <article>
-                article
-                    <p>
+                <h3>article</h3>
+                    <div>
                         h1, h2, h3
-                    </p>
+                    </div>
                     <p>
                         p
                     </p>
@@ -32,7 +32,7 @@
     </section>
 
     <aside>
-        aside
+        <h2>aside</h2>
     </aside>
 
     <footer>
